--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hellocazzo, world!</h1>
 
     <select id="menu">
       <option value="">-- Scegli un saluto --</option>
